--- a/bmw.html
+++ b/bmw.html
@@ -1857,6 +1857,7 @@
             width: 16px;
             height: 16px;
             cursor: pointer;
+            accent-color: #1976d2;
         }
         
         @keyframes authShake {
