Update Yandex subfolders in bmw.html

--- a/bmw.html
+++ b/bmw.html
@@ -2404,7 +2404,9 @@
                     'Акт + селфи + СКУД + ОЖР',
                     'Общий фотоотчет',
                     'Периметральное ограждение + Подъездные пути',
-                    'Замечания строительной площадки + Грунт'
+                    'Замечания строительной площадки + Грунт',
+                    'Бытовые помещения',
+                    'Замечания контроль качества'
                 ])
             },
             
